src/objects/ints__Credit_Report_Inquiry__c.object
<CustomObject>
    <fields>
        <fullName>ints__BorrowerID__c</fullName>
        <label>Borrower ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditBusinessType__c</fullName>
        <label>Credit Business Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditFileID__c</fullName>
        <label>Credit File ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditInquiryID__c</fullName>
        <label>Credit Inquiry ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReport__c</fullName>
        <label>Credit Report</label>
        <referenceTo>ints__Credit_Report__c</referenceTo>
        <relationshipLabel>CreditReportInquiry</relationshipLabel>
        <relationshipName>CreditReportInquiry</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__CreditTradeReferenceID__c</fullName>
        <label>Credit Trade Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ints__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__SourceType__c</fullName>
        <label>Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__SubscriberCode__c</fullName>
        <label>Subscriber Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Report Inquiry</label>
    <nameField>
        <displayFormat>CRI-{0000000000}</displayFormat>
        <label>Credit Report Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Report Inquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>